js262/test/language/statements/class/private-static-setter-non-static-getter-early-error.js


/*---
esid: pending
description: >
    It is a Syntax Error if we declare a static private setter and a private instance getter
features: [class-static-methods-private, class-methods-private]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

class C {
  static set #f(v) {}
  get #f() {}
}

